--- a/.gitmodules
+++ b/.gitmodules
@@ -16,3 +16,12 @@
 [submodule "oh-my-zsh"]
 	path = oh-my-zsh
 	url = https://github.com/robbyrussell/oh-my-zsh.git
+[submodule "vim/pack/plugins/start/vim-codequery"]
+	path = vim/pack/plugins/start/vim-codequery
+	url = https://github.com/devjoe/vim-codequery.git
+[submodule "vim/pack/plugins/start/unite.vim"]
+	path = vim/pack/plugins/start/unite.vim
+	url = https://github.com/Shougo/unite.vim.git
+[submodule "vim/pack/plugins/start/denite.nvim"]
+	path = vim/pack/plugins/start/denite.nvim
+	url = https://github.com/Shougo/denite.nvim.git
