--- a/i3/config
+++ b/i3/config
@@ -158,6 +158,6 @@ bar {
 # Custom stats
 new_window 1pixel
 exec $HOME/.screenlayout/main.sh
-workspace 1 output DP-0
-workspace 2 output HDMI-0
-workspace 3 output DVI-I-1
+#workspace 1 output DP-0
+#workspace 2 output HDMI-0
+#workspace 3 output DVI-I-1
