--- a/i3/config
+++ b/i3/config
@@ -158,7 +158,7 @@ bar {
 # Custom stats
 default_border pixel 1
 exec $HOME/.screenlayout/main.sh
-#workspace 1 output DP-0
-#workspace 2 output HDMI-0
+workspace 1 output HDMI-A-1
+workspace 2 output HDMI-A-0
 #workspace 3 output DVI-I-1
 bindsym $mod+Shift+f focus parent; fullscreen; focus child
