--- a/i3/config
+++ b/i3/config
@@ -33,7 +33,7 @@ floating_modifier $mod
 bindsym $mod+Return exec termite
 
 # kill focused window
-bindsym $mod+Shift+q kill
+bindsym $mod+Shift+q kil
 
 # start dmenu (a program launcher)
 bindsym $mod+d exec dmenu_run
